operator/create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: infinispan-namespace
  labels: 
    istio-injection: disabled
