operator/mTLS-infinispan.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: infinispan-istio
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE
