operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
    - host: cluster.local
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: data-index
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-approval-process
                port:
                  number: 80
